--- a/projects.css
+++ b/projects.css
@@ -1,9 +1,9 @@
-html, body {
+html, body{
     height: auto;
     width: auto;
 }
 
-html, header, body, main, footer {
+html, header, body,footer {
     padding: 0;
     margin: 0;
 }
@@ -25,10 +25,11 @@ a {
     text-decoration: none;
 }
 
-main {
+body {
     display: grid;
     grid-template-columns: repeat(43, 40px);
     grid-template-rows: repeat(28, 40px);
+    background-color: #E0E0E0;
 
 }
 
@@ -71,11 +72,6 @@ nav ul li a {
     line-height: normal;
 }
 
-body {
-    background-color: #E0E0E0;
-    height: 1117px;
-    width: 1728px;
-}
 
 body .wip {
     grid-column: 3/25;
